@@ -16,14 +16,12 @@ clean:
 	dh_clean
 
 binary-arch:
-
-binary-indep: build
 	dh_testdir
 	dh_testroot
 	dh_clean -k
-	dh_installdirs -i
+	dh_installdirs -a
 	$(MAKE) -C d-i install
-	dh_install -i
+	dh_install -a
 
 	# Bits of manual installation that can't be done by dh_install
 	sed 's,/usr/share/tzsetup,/usr/lib/oem-config/tzsetup,g' \
@@ -38,15 +36,28 @@ binary-indep: build
 	done
 
 	cp debian/lintian-override $(tmp)/usr/share/lintian/overrides/oem-config
-	dh_installdebconf -i
+	dh_installdebconf -a
 	echo >> debian/oem-config/DEBIAN/templates
 	cat d-i/templates >> debian/oem-config/DEBIAN/templates
-	dh_installdocs
-	dh_installchangelogs
-	dh_installinit -n
+	dh_installdocs -a
+	dh_installchangelogs -a
+	dh_installinit -a -n
+	dh_compress -a
+	dh_fixperms -a
+	dh_python -a
+	dh_installdeb -a
+	dh_gencontrol -a
+	dh_md5sums -a
+	dh_builddeb -a
+
+binary-indep: build
+	dh_testdir
+	dh_testroot
+	dh_clean -k
+	dh_install -i
+	dh_installdebconf -i
 	dh_compress -i
 	dh_fixperms -i
-	dh_python
 	dh_installdeb -i
 	dh_gencontrol -i
 	dh_md5sums -i
